...
                  style={styles.profileButton}
                  onPress={() => navigation.navigate("AR")}
                >
                  <Feather name="layers" size={18} color={colors.accentPink} />
                </TouchableOpacity>
                <TouchableOpacity
                  testID="open-profile-button"
                  style={styles.profileButton}
                  onPress={() => navigation.navigate("EditProfile")}
                >
                  <Text style={styles.profileInitial}>{profileInitial}</Text>
                </TouchableOpacity>
              </View>
...
